--- a/scss/style.css
+++ b/scss/style.css
@@ -1,7 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
   margin: 0 auto;
   padding: 0;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
 }
 
 .spinner-wrapper {
@@ -10,7 +12,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 20px;
+  width: 10px;
 }
 
 /* Track */
@@ -20,25 +22,28 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #03f8fc;
+  background: #19d3da;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #03f8fc;
-  border: 1px solid #ffffff;
+  background: #19d3da;
 }
 
 html {
   scroll-behavior: smooth;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
 }
 
 body {
   background: whitesmoke;
-  font-family: 'Noto Sans TC', sans-serif;
+  font-family: 'Mulish', sans-serif;
   padding: 13% 0;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
 }
 
 .coversection {
@@ -47,17 +52,27 @@ body {
   vertical-align: middle;
 }
 
-.sale {
-  margin: auto;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+.productcover {
+  margin: 1% auto 5% auto;
+  background: #f8f8f8;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08);
+          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08);
+  border-radius: 5px;
+  padding: 1%;
+  position: relative;
 }
 
-.detailes {
+.productcover .sale {
+  margin: 0.5% auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0.5%;
+}
+
+.productcover .detailes {
   width: 95%;
-  padding: 0.5% 0 0 1.5%;
-  margin: 0% 0% 4% 0%;
+  padding: 0.5% 0%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -65,32 +80,15 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
-.detailes .line {
-  position: absolute;
-  top: 0;
-  margin: 1% 0;
-  padding: 2% 0;
-}
-
-.productcover {
-  margin: 1% auto 8% auto;
-  background: #f8f8f8;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.16), 0 1px 4px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.16), 0 1px 4px rgba(0, 0, 0, 0.2);
-  border-radius: 5px;
-  padding: 2%;
-  position: relative;
+.productcover .detailes .line {
+  margin: 0% 0% 1% 0%;
 }
 
 .productcover .pot {
-  width: 35%;
-  margin: 0 auto 0 0;
-  float: right;
+  width: 40%;
+  margin: 0;
 }
 
 .productcover .pot img {
@@ -106,17 +104,51 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 3%;
+  margin: 2% auto;
 }
 
 .buttonslot a {
-  width: 40%;
+  text-align: center;
+  font-size: 1.5em;
+  width: 100%;
 }
 
 .buttonslot .btn {
-  width: 100%;
+  width: auto;
   margin: auto;
-  height: 90%;
+}
+
+.btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-transform: bold;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 95%;
+  height: auto;
+  margin: 1% auto;
+  color: #19d3da;
+  background: #012154;
+  border-radius: 5px;
+  padding: 1% 1.5% 1% 1.5%;
+  font-size: 1em;
+}
+
+.btn i,
+.btn span {
+  width: auto;
+  padding: 0% 1%;
+  margin: 0;
+}
+
+.btn:hover {
+  opacity: 0.9;
 }
 
 header {
@@ -170,7 +202,7 @@ header {
 }
 
 .offlogo:hover + span {
-  color: #03f8fc;
+  color: #19d3da;
   -webkit-transform: scale(1.3);
           transform: scale(1.3);
   z-index: 5;
@@ -183,9 +215,9 @@ header {
 }
 
 .tapbut:hover + span {
-  color: #03f8fc;
-  -webkit-transform: scale(1.3);
-          transform: scale(1.3);
+  color: #19d3da;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
   z-index: 5;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
@@ -245,36 +277,6 @@ header {
           animation-timing-function: linear;
 }
 
-.btn {
-  width: 90%;
-  height: auto;
-  margin: 3% auto;
-  bottom: 0;
-  background: #012154;
-  color: #ffffff;
-  font-weight: 100;
-  border-radius: 5px;
-  bottom: 0;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  padding: 1% 1.5% 1% 1.5%;
-  font-size: 0.9em;
-}
-
-.btn:hover {
-  -webkit-transition: all 1s ease-in;
-  transition: all 1s ease-in;
-  background: #000000;
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
-  color: #03f8fc;
-}
-
 .navs a span {
   font-size: 2vh;
   color: #ffffff;
@@ -288,10 +290,10 @@ header {
 
 h1 {
   background-color: #012154;
-  color: #03f8fc;
+  color: #19d3da;
+  font-weight: bold;
   font-size: 1em;
   text-align: center;
-  font-weight: 200;
   padding: 2% auto;
   margin: 1% auto;
 }
@@ -453,23 +455,21 @@ li li {
 .wpbloc {
   width: 30%;
   margin: 0.5%;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
 }
 
 .wpbloc img {
   width: 100%;
   height: auto;
-  border-radius: 3px;
+  border-radius: 5px;
 }
 
 .tdbloc {
   width: 73%;
   padding: 0.5%;
   margin: 0.5%;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08);
+          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08);
   border-radius: 5px;
 }
 
@@ -506,8 +506,8 @@ li li {
 .djthings img {
   width: 30%;
   margin: 1%;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
-  border-radius: 5px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08);
+          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08);
+  border-radius: 3px;
 }
 /*# sourceMappingURL=style.css.map */
