--- a/scss/responsive.css
+++ b/scss/responsive.css
@@ -46,6 +46,9 @@
   .Nametag .logo_container div {
     margin: 0 2%;
   }
+  footer {
+    display: none;
+  }
 }
 
 @media only screen and (min-device-width: 700px) and (max-device-width: 1200px) {
@@ -58,6 +61,9 @@
   .wallpaper {
     width: 25%;
     margin: 4% 10%;
+  }
+  footer {
+    display: none;
   }
 }
 /*# sourceMappingURL=responsive.css.map */
