--- a/scss/responsive.css
+++ b/scss/responsive.css
@@ -1,4 +1,7 @@
 @media screen and (max-width: 1200px) {
+  body {
+    font-size: 110%;
+  }
   header {
     position: fixed;
     bottom: 0;
@@ -49,10 +52,15 @@
   footer {
     display: none;
   }
+  .about_us h4 {
+    margin: 15% 0% 3% 0%;
+  }
 }
 
 @media only screen and (min-device-width: 700px) and (max-device-width: 1200px) {
-  /* For portrait layouts only */
+  body {
+    font-size: 120%;
+  }
   main {
     width: 100%;
     margin: 0 auto;
@@ -64,6 +72,9 @@
   }
   footer {
     display: none;
+  }
+  .about_us h4 {
+    margin: 10% 0% 1% 0%;
   }
 }
 /*# sourceMappingURL=responsive.css.map */
