--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,26 +20,29 @@ html {
 }
 
 body {
+    font-size: 120%;
     scroll-behavior: smooth;
     background: $black;
     font-family: 'Mulish', sans-serif;
     color: $white;
 }
 
-header{
+header {
     background: $lightblue;
     height: auto;
     padding: 1% 3%;
 
-    nav{
+    nav {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        img{
+
+        img {
             width: 30px;
             height: 30px;
         }
-        a{
+
+        a {
             text-decoration: none;
             display: block;
             color: $white;
@@ -50,25 +53,32 @@ header{
             background-color: #01215434;
             font-weight: 700;
         }
-        a .tapbutton{
+
+        a .tapbutton {
             margin: 0% 1%;
-            
+
         }
 
-        a:hover{
+        a:hover {
             color: $theme;
             background: $white;
             border-radius: 5px;
         }
-    } 
+    }
 }
 
-main{
+.activebutton {
+    color: $white;
+    background: #0121548c;
+    border-radius: 5px;
+}
+
+main {
     width: 80%;
     margin: 0 auto;
     padding: 2% 1%;
 
-    .Contentshower{
+    .Contentshower {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -76,46 +86,46 @@ main{
 }
 
 
-.Nametag .logo_container{
+.Nametag .logo_container {
     width: 40%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin:3% auto;
- 
-    .main_logo{
+    margin: 3% auto;
+
+    .main_logo {
         width: 80px;
-        margin:0;
+        margin: 0;
     }
 
-    div{
-        margin:0 2%;
+    div {
+        margin: 0 2%;
 
     }
 }
 
-.wallpaper{
+.wallpaper {
     width: 22%;
     position: relative;
     display: flex;
     margin: 1% 5%;
-   
 
-    img{
+
+    img {
         width: 100%;
         border: 0.5px solid $theme;
         border-radius: 5px solid;
     }
 
-    h4{
+    h4 {
         transform: rotate(90deg);
         position: absolute;
         bottom: 0;
         margin: 80% -10%;
     }
 
-    .buttondownload{
-        position:absolute;
+    .buttondownload {
+        position: absolute;
         width: 80px;
         height: auto;
         margin: 0 1%;
@@ -129,40 +139,65 @@ main{
         border-radius: 5px;
     }
 
-    .buttondownload:hover{
+    .buttondownload:hover {
         background-color: $white;
         color: $theme;
     }
 }
 
-footer{
+footer {
     background-color: $lightblue;
     padding: 3% 3%;
     display: flex;
     justify-content: space-between;
 
-    div{
+    div {
         width: 20%;
         display: flex;
         justify-content: space-evenly;
 
-        a{
+        a {
             text-decoration: none;
             color: $white;
             background: #01215428;
             padding: 2% 3%;
             border-radius: 5px;
         }
-        
-        a:hover{
+
+        a:hover {
             color: $theme;
-            background:$white;
+            background: $white;
         }
     }
 
 }
 
+.about_us {
+    padding: 4%;
 
+    h4 {
+        margin: 5% 0% 1% 0%;
+    }
+}
 
+.social {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 3% 0;
+    margin: 3% 0 5% 0;
+    border-radius: 5px;
+    background: $theme;
 
+    a {
+        text-decoration: none;
+        color: $white;
+        background: #19d4da80;
+        padding: 2% 3%;
+        border-radius: 5px;
+    }
 
+    a:hover {
+        color: $theme;
+        background: $white;
+    }
+}
