:tada: Web version 1

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -113,7 +113,7 @@ main {
 
     img {
         width: 100%;
-        border: 0.5px solid $theme;
+        border: 0.1px solid #ffffff48;
         border-radius: 5px solid;
     }
 
@@ -177,6 +177,7 @@ footer {
 
     h4 {
         margin: 5% 0% 1% 0%;
+
     }
 }
 
