--- a/scss/style.css
+++ b/scss/style.css
@@ -123,7 +123,7 @@ main .Contentshower {
 
 .wallpaper img {
   width: 100%;
-  border: 0.5px solid #012154;
+  border: 0.1px solid #ffffff48;
   border-radius: 5px solid;
 }
 
