--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 760px) {
 
     body{
         font-size: 110%;
@@ -17,7 +17,7 @@
     main{
         width: 100%;
         margin: 0 auto;
-        padding: 10% 0%;
+        padding: 3% 0%;
     }
     .Contentshower{
         margin: 0 auto;
@@ -27,11 +27,11 @@
         padding: 1%;
     }
 
-    .wallpaper{
+    .Mainbox{
         width: 60%;
         margin: 4% 10%;
     }
-
+    
     .Nametag .logo_container{
         width: 90%;
         margin:10% auto;
@@ -53,6 +53,10 @@
         display: none;
     }
 
+    .lightanddark{
+        width: 100%;
+    }
+
     .about_us {
 
     
@@ -64,30 +68,27 @@
 }
 
 
-@media only screen and (min-device-width: 700px) and (max-device-width:  1200px){
-
-    body{
-        font-size: 120%;
-    }
-    main{
-        width: 100%;
-        margin: 0 auto;
-        padding: 10% 0%;
+@media only screen and (min-device-width: 700px) and (max-device-width:  1024px){
+   
+    .Mainbox{
+        width: 30%;
+        margin: 4% 8%;
     }
 
-    .wallpaper{
-        width:25%;
-        margin: 4% 10%;
-    }
-
-    footer{
-        display: none;
-    }
-
-    .about_us {
-
-        h4 {
-            margin: 10% 0% 1% 0%;
+    .Nametag .logo_container{
+        width: 90%;
+        margin:10% auto;
+        flex-direction: column;
+     
+        .main_logo{
+            width: 50px;
+            margin:2% 0;
         }
-    }
+    
+        div{
+            margin:0 2%;
+    
+        }
+ 
   }
+}
