:tada: With toggle buttons

--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -15,9 +15,9 @@
     }
 
     main{
-        width: 100%;
+        width: 98%;
         margin: 0 auto;
-        padding: 3% 0%;
+        padding: 3% 0% 15% 0%;
     }
     .Contentshower{
         margin: 0 auto;
@@ -55,6 +55,7 @@
 
     .lightanddark{
         width: 100%;
+
     }
 
     .about_us {
