--- a/scss/responsive.css
+++ b/scss/responsive.css
@@ -13,9 +13,9 @@
     display: none;
   }
   main {
-    width: 100%;
+    width: 98%;
     margin: 0 auto;
-    padding: 3% 0%;
+    padding: 3% 0% 15% 0%;
   }
   .Contentshower {
     margin: 0 auto;
