--- a/scss/style.css
+++ b/scss/style.css
@@ -25,6 +25,7 @@ header {
   background: #19d3da;
   height: auto;
   padding: 1% 3%;
+  z-index: 2;
 }
 
 header nav {
@@ -88,6 +89,36 @@ main .Contentshower {
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+
+.loadingscreen {
+  background: #0c0c0c;
+  position: fixed;
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.loadingscreen img {
+  width: 100px;
+  margin: 0% auto;
+}
+
+.loadingscreen p {
+  margin: 1% auto;
 }
 
 .Nametag .logo_container {
