--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,8 +13,6 @@ $iconscolor: #19d3da;
     font-family: 'Mulish', sans-serif;
 }
 
-
-
 html {
     scroll-behavior: smooth;
     box-sizing: content-box;
@@ -32,7 +30,7 @@ header {
     background: $lightblue;
     height: auto;
     padding: 1% 3%;
-
+    z-index: 2;
     nav {
         display: flex;
         align-items: center;
@@ -86,6 +84,27 @@ main {
     }
 }
 
+
+.loadingscreen{
+    background: $black;
+    position: fixed;
+    z-index: 3;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    img{
+        width: 100px;
+        margin: 0% auto;
+    }
+
+    p{
+        margin: 1% auto;
+    }
+}
 
 .Nametag .logo_container {
     width: 50%;
