--- a/scss/style.scss
+++ b/scss/style.scss
@@ -80,6 +80,7 @@ main {
     .Contentshower {
         display: flex;
         flex-direction: row;
+        justify-content: flex-start;
         align-items: flex-start; 
         flex-wrap: wrap;
     }
