--- a/scss/style.css
+++ b/scss/style.css
@@ -19,6 +19,8 @@ body {
   background: #0c0c0c;
   font-family: 'Mulish', sans-serif;
   color: #ffffff;
+  -webkit-transition: all 5S ease-in-out 1;
+  transition: all 5S ease-in-out 1;
 }
 
 header {
@@ -53,7 +55,7 @@ header nav a {
   text-align: center;
   padding: 1% 0.5%;
   border-radius: 5px;
-  background-color: #01215434;
+  background-color: #01215431;
   font-weight: 700;
 }
 
@@ -62,6 +64,8 @@ header nav a .tapbutton {
 }
 
 header nav a:hover {
+  -webkit-transition: all 2S ease-in-out 1;
+  transition: all 2S ease-in-out 1;
   color: #012154;
   background: #ffffff;
   border-radius: 5px;
@@ -69,7 +73,7 @@ header nav a:hover {
 
 .activebutton {
   color: #ffffff;
-  background: #0121548c;
+  background: #01215496;
   border-radius: 5px;
 }
 
