--- a/scss/style.css
+++ b/scss/style.css
@@ -1,4 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+.ball {
+  position: absolute;
+  border-radius: 100%;
+  opacity: 0.2;
+  z-index: -10;
+}
+
 * {
   margin: 0 auto;
   padding: 0;
@@ -24,9 +31,9 @@ body {
 }
 
 header {
-  background: #19d3da;
+  background: #000000;
   height: auto;
-  padding: 1% 3%;
+  padding: 1.5% 2%;
   z-index: 2;
 }
 
@@ -55,7 +62,7 @@ header nav a {
   text-align: center;
   padding: 1% 0.5%;
   border-radius: 5px;
-  background-color: #01215431;
+  background-color: #ffffff31;
   font-weight: 700;
 }
 
@@ -72,8 +79,8 @@ header nav a:hover {
 }
 
 .activebutton {
-  color: #ffffff;
-  background: #01215496;
+  color: #19d3da;
+  background: #ffffff31;
   border-radius: 5px;
 }
 
@@ -157,7 +164,7 @@ main .Contentshower {
 .Mainbox {
   width: 23%;
   height: 100%;
-  margin: 1% 5%;
+  margin: 1% 10% 0% 0%;
 }
 
 .wallpaper {
@@ -178,6 +185,7 @@ main .Contentshower {
   height: 100% !important;
   border: 0.1px solid #ffffff48;
   border-radius: 5px solid;
+  background-color: #ffffff38;
 }
 
 .wallpaper h4 {
@@ -190,16 +198,16 @@ main .Contentshower {
 
 .wallpaper .buttondownload {
   position: absolute;
-  width: 80px;
+  width: auto;
   height: auto;
   margin: 0 1%;
   bottom: 0;
-  background-color: #19d3da;
-  border: 0.2px solid #012154;
+  background-color: #195dda23;
+  border: 2px solid #ffffff48;
   text-decoration: none;
   color: #ffffff;
   text-align: center;
-  padding: 5% 1%;
+  padding: 3% 12%;
   border-radius: 5px;
 }
 
@@ -209,7 +217,7 @@ main .Contentshower {
 }
 
 footer {
-  background-color: #19d3da;
+  background-color: #000000;
   padding: 3% 3%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -217,6 +225,8 @@ footer {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  color: #ffffff;
+  font-weight: 500;
 }
 
 footer div {
@@ -232,7 +242,7 @@ footer div {
 footer div a {
   text-decoration: none;
   color: #ffffff;
-  background: #01215428;
+  background: #ffffff28;
   padding: 2% 3%;
   border-radius: 5px;
 }
@@ -260,13 +270,14 @@ footer div a:hover {
   padding: 3% 0;
   margin: 3% 0 5% 0;
   border-radius: 5px;
-  background: #012154;
+  background: #195dda10;
 }
 
 .social a {
   text-decoration: none;
   color: #ffffff;
-  background: #19d4da80;
+  background: #19d3da;
+  font-size: 3vh;
   padding: 2% 3%;
   border-radius: 5px;
 }
