--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,10 +1,18 @@
 $white: #ffffff;
 $black: #0c0c0c;
+$darkblack: #000000;
 $theme: #012154;
 $lightblue: #19d3da;
 $iconscolor: #19d3da;
 
 @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+.ball {
+    position: absolute;
+    border-radius: 100%;
+    opacity: 0.2;
+    z-index: -10;
+  }
 
 * {
     margin: 0 auto;
@@ -29,9 +37,9 @@ body {
 }
 
 header {
-    background: $lightblue;
+    background: $darkblack;
     height: auto;
-    padding: 1% 3%;
+    padding: 1.5% 2%;
     z-index: 2;
     nav {
         display: flex;
@@ -51,7 +59,7 @@ header {
             text-align: center;
             padding: 1% 0.5%;
             border-radius: 5px;
-            background-color: #01215431;
+            background-color: #ffffff31;
             font-weight: 700;
         }
 
@@ -70,8 +78,8 @@ header {
 }
 
 .activebutton {
-    color: $white;
-    background: #01215496;
+    color: $lightblue;
+    background: #ffffff31;
     border-radius: 5px;
 }
 
@@ -133,7 +141,7 @@ main {
 .Mainbox{
     width: 23%;
     height: 100%;
-    margin: 1% 5%;
+    margin: 1% 10% 0% 0%;
 }
 
 .wallpaper {
@@ -147,6 +155,7 @@ main {
         height: 100% !important;
         border: 0.1px solid #ffffff48;
         border-radius: 5px solid;
+        background-color: #ffffff38;
     }
 
     h4 {
@@ -158,16 +167,16 @@ main {
 
     .buttondownload {
         position: absolute;
-        width: 80px;
+        width: auto;
         height: auto;
         margin: 0 1%;
         bottom: 0;
-        background-color: $lightblue;
-        border: 0.2px solid $theme;
+        background-color: #195dda23;
+        border: 2px solid #ffffff48;
         text-decoration: none;
         color: $white;
         text-align: center;
-        padding: 5% 1%;
+        padding: 3% 12%;
         border-radius: 5px;
     }
 
@@ -178,10 +187,12 @@ main {
 }
 
 footer {
-    background-color: $lightblue;
+    background-color: $darkblack;
     padding: 3% 3%;
     display: flex;
     justify-content: space-between;
+    color: $white;
+    font-weight: 500;
 
     div {
         width: 20%;
@@ -191,7 +202,7 @@ footer {
         a {
             text-decoration: none;
             color: $white;
-            background: #01215428;
+            background: #ffffff28;
             padding: 2% 3%;
             border-radius: 5px;
         }
@@ -219,12 +230,13 @@ footer {
     padding: 3% 0;
     margin: 3% 0 5% 0;
     border-radius: 5px;
-    background: $theme;
+    background:#195dda10;
 
     a {
         text-decoration: none;
         color: $white;
-        background: #19d4da80;
+        background: $lightblue;
+        font-size: 3vh;
         padding: 2% 3%;
         border-radius: 5px;
     }
