--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -67,8 +67,22 @@
             margin:15% 0% 3% 0%;
         }
     }
+
+    .explorersection {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .assetcs {
+        padding: 3%;
+        margin: 5% auto;
+        width: 90%;
+    }
+    
     
 }
+
 
 
 @media only screen and (min-device-width: 700px) and (max-device-width:  1024px){
@@ -101,4 +115,17 @@
         }
  
   }
+
+  .explorersection {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.assetcs {
+    padding: 3%;
+    margin: 5% auto;
+    width: 90%;
+}
+
 }
