--- a/scss/style.css
+++ b/scss/style.css
@@ -327,4 +327,75 @@ footer div a:hover {
   background: white;
   color: #012154;
 }
+
+.explorersection {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.assetcs {
+  width: 28%;
+  margin: 2%;
+  background: rgba(255, 255, 255, 0.027);
+  padding: 1%;
+  border-radius: 10px;
+  text-align: left;
+}
+
+.assetcs img {
+  display: block;
+  margin: 3% auto;
+  border-radius: 10px;
+  width: 300px;
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.assetcs h2 {
+  margin: 2% 0%;
+  color: #19d3da;
+}
+
+.assetcs p {
+  margin: 2% 0%;
+}
+
+.assetcs a {
+  display: block;
+}
+
+.assetcs .tags {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  display: block;
+  background: rgba(255, 255, 255, 0.027);
+  color: #19d3da;
+  border: none;
+  padding: 2% 5%;
+  outline: none;
+  border-radius: 5px;
+  margin: 5% 0%;
+  font-style: italic;
+}
+
+.assetcs .buttonassects {
+  width: 20%;
+  height: auto;
+  margin: 1% 0% 1% auto;
+  background-color: #195dda23;
+  border: 2px solid #ffffff48;
+  text-decoration: none;
+  color: #ffffff;
+  text-align: center;
+  padding: 3% 10%;
+  border-radius: 5px;
+}
 /*# sourceMappingURL=style.css.map */
