--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,18 +7,15 @@ $iconscolor: #19d3da;
 
 @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-.ball {
-    position: absolute;
-    border-radius: 100%;
-    opacity: 0.2;
-    z-index: -10;
-}
 
 * {
     margin: 0 auto;
     padding: 0;
     box-sizing: content-box;
     font-family: 'Mulish', sans-serif;
+}
+button{
+    font-size: 80%;
 }
 
 html {
@@ -264,13 +261,14 @@ footer {
     justify-content: center;
 
     .buttonsselecter {
+        border: 1px solid #19d4da2c;
         background: rgba(255, 255, 255, 0.027);
-        color: $lightblue;
-        border: none;
-        padding: 2% 5%;
+        color: $white;
+        padding: 2% 3%;
         outline: none;
         border-radius: 5px;
         margin: 0% 2%;
+        font-weight: 700;
 
     }
 
@@ -291,11 +289,12 @@ footer {
     width: 100%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
-.assetcs {
-    width: 28%;
-    margin: 2%;
+.assetcsofcontents {
+    width:20%;
+    margin: 1%;
     background: rgba(255, 255, 255, 0.027);
     padding: 1%;
     border-radius: 10px;
@@ -321,16 +320,25 @@ footer {
     a{
         display: block;
     }
+    
+    
+    .butandtag{
+    display: flex;
+    align-items: center;
+    }
+    
+    
     .tags{
-        width: fit-content;
+        width: auto;
+        height: auto;
         display: block;
         background: rgba(255, 255, 255, 0.027);
         color: $lightblue;
         border: none;
-        padding: 2% 5%;
+        padding: 3% 3%;
         outline: none;
         border-radius: 5px;
-        margin:5% 0%;
+        margin:5% 2%;
         font-style: italic;
     }
     
@@ -346,4 +354,34 @@ footer {
         padding: 3% 10%;
         border-radius: 5px;
     }
+
+}
+
+.alltypes{
+    display: flex;
+    justify-content: center;
+    margin: 3% auto;
+}
+
+.alltypes button{
+    border: 1px solid #19d4da2c;
+    background: rgba(255, 255, 255, 0.027);
+    color: $white;
+    padding: 1% 3%;
+    outline: none;
+    border-radius: 5px;
+    margin: 0% 2%;
+    font-weight: 700;
+
+}
+
+.alltypes button:hover {
+    background: rgb(255, 255, 255);
+    color: $theme;
+    cursor: pointer;
+}
+
+.activation {
+    background: rgb(255, 255, 255);
+    color: $theme;
 }
