--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -7,17 +7,23 @@
         position: fixed;
         bottom: 0;
         width: 100%;
+        height: 6vh;
         padding: 3% 1%;
         a span{
             display: none;
         }
         z-index: 2;
     }
+    
+    .alltypes button{
+        font-size: 100%;
+        padding: 3% 6%;
+    }
 
     main{
         width: 98%;
         margin: 0 auto;
-        padding: 3% 0% 15% 0%;
+        padding: 3% 0% 30% 0%;
     }
     .Contentshower{
         margin: 0 auto;
@@ -74,7 +80,7 @@
         flex-direction: column;
     }
     
-    .assetcs {
+    .assetcsofcontents {
         padding: 3%;
         margin: 5% auto;
         width: 90%;
@@ -122,7 +128,7 @@
     flex-direction: column;
 }
 
-.assetcs {
+.assetcsofcontents {
     padding: 3%;
     margin: 5% auto;
     width: 90%;
