--- a/scss/responsive.css
+++ b/scss/responsive.css
@@ -77,6 +77,8 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
   .assetcsofcontents {
     padding: 3%;
@@ -116,20 +118,10 @@
   .Nametag .logo_container div {
     margin: 0 2%;
   }
-  .explorersection {
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
   .assetcsofcontents {
     padding: 3%;
     margin: 5% auto;
-    width: 90%;
+    width: 40%;
   }
 }
 /*# sourceMappingURL=responsive.css.map */
