--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -78,6 +78,7 @@
         width: 100%;
         display: flex;
         flex-direction: column;
+        flex-wrap: wrap;
     }
     
     .assetcsofcontents {
@@ -122,16 +123,10 @@
  
   }
 
-  .explorersection {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.assetcsofcontents {
+  .assetcsofcontents {
     padding: 3%;
     margin: 5% auto;
-    width: 90%;
+    width: 40%;
 }
 
 }
