--- a/scss/style.css
+++ b/scss/style.css
@@ -352,8 +352,8 @@ footer div a:hover {
   display: block;
   margin: 3% auto;
   border-radius: 10px;
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: 30vh;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -435,7 +435,7 @@ footer div a:hover {
 }
 
 .activation {
-  background: white;
+  background: blue;
   color: #012154;
 }
 /*# sourceMappingURL=style.css.map */
