--- a/scss/style.scss
+++ b/scss/style.scss
@@ -304,8 +304,8 @@ footer {
         display: block;
         margin: 3% auto;
         border-radius: 10px;
-        width: 300px;
-        height: 300px;
+        width: 100%;
+        height: 30vh;
         object-fit: cover;
     }
 
@@ -382,6 +382,6 @@ footer {
 }
 
 .activation {
-    background: rgb(255, 255, 255);
+    background: blue;
     color: $theme;
 }
