--- a/scss/responsive.css
+++ b/scss/responsive.css
@@ -6,8 +6,8 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 6vh;
-    padding: 3% 1%;
+    padding: 5% 1%;
+    font-size: 110%;
     z-index: 2;
   }
   header a span {
