--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -7,8 +7,8 @@
         position: fixed;
         bottom: 0;
         width: 100%;
-        height: 6vh;
-        padding: 3% 1%;
+        padding: 5% 1%;
+        font-size: 110%;
         a span{
             display: none;
         }
